--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
-    "postinstall": "wxt prepare"
+    "postinstall": "wxt prepare",
+    "check": "biome check .",
+    "check:write": "biome check --write ."
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.6.1",
+    "@mlc-ai/web-llm": "^0.2.79",
+    "dedent": "^1.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.0.6",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@wxt-dev/module-react": "^1.1.3",
