--- a/package.json
+++ b/package.json
@@ -17,12 +17,27 @@
     "check:write": "biome check --write ."
   },
   "dependencies": {
+    "@heroui/accordion": "^2.2.20-beta.2",
+    "@heroui/react": "^2.8.0-beta.13",
+    "@heroui/select": "^2.4.23-beta.2",
+    "@heroui/slider": "^2.4.20-beta.2",
+    "@heroui/switch": "^2.2.21-beta.1",
     "@huggingface/transformers": "^3.6.1",
     "@mlc-ai/web-llm": "^0.2.79",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
     "@webext-core/messaging": "^2.3.0",
+    "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "dedent": "^1.6.0",
+    "framer-motion": "^12.23.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-aria-components": "^1.10.1",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
