--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mlc-ai/web-llm": "^0.2.79",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.81.5",
     "@webext-core/messaging": "^2.3.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
