--- a/models/pyproject.toml
+++ b/models/pyproject.toml
@@ -5,5 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "optimum[exporters]>=1.26.1",
+    "accelerate>=1.8.1",
+    "numpy==2.2.6",
+    "onnx>=1.18.0",
+    "onnxruntime==1.20.1",
+    "onnxslim==0.1.48",
+    "optimum[exporters,onnxruntime]>=1.26.1",
+    "tqdm==4.67.1",
+    "transformers[torch]==4.49.0",
 ]
+
+[tool.uv.sources]
+optimum = { git = "https://github.com/huggingface/optimum.git", rev = "b04feaea78cda58d79b8da67dca3fd0c4ab33435" }
