feat: add tabularisai/multilingual-sentiment-analysis

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare",
     "check": "biome check .",
-    "check:write": "biome check --write ."
+    "check:write": "biome check --write .",
+    "convert": "bun run --cwd=models convert"
   },
   "workspaces": [
     "sandbox/app"
