--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "dedent": "^1.6.0",
     "framer-motion": "^12.23.0",
+    "idb": "^8.0.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-aria-components": "^1.10.1",
