--- a/package.json
+++ b/package.json
@@ -21,36 +21,36 @@
     "sandbox/app"
   ],
   "dependencies": {
-    "@heroui/accordion": "^2.2.20-beta.2",
-    "@heroui/react": "^2.8.0-beta.13",
-    "@heroui/select": "^2.4.23-beta.2",
-    "@heroui/slider": "^2.4.20-beta.2",
-    "@heroui/switch": "^2.2.21-beta.1",
-    "@huggingface/transformers": "^3.6.1",
+    "@heroui/accordion": "^2.2.20",
+    "@heroui/react": "^2.8.1",
+    "@heroui/select": "^2.4.24",
+    "@heroui/slider": "^2.4.20",
+    "@heroui/switch": "^2.2.21",
+    "@huggingface/transformers": "^3.7.0",
     "@mlc-ai/web-llm": "^0.2.79",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query": "^5.83.0",
     "@webext-core/messaging": "^2.3.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "dedent": "^1.6.0",
-    "framer-motion": "^12.23.0",
+    "framer-motion": "^12.23.11",
     "idb": "^8.0.3",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-aria-components": "^1.10.1",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-aria-components": "^1.11.0",
+    "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^1.0.0",
+    "tailwind-variants": "^2.0.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.6",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
+    "@biomejs/biome": "2.1.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@wxt-dev/module-react": "^1.1.3",
     "typescript": "^5.8.3",
-    "wxt": "^0.20.6"
+    "wxt": "^0.20.7"
   }
 }
