--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "./.wxt/tsconfig.json",
+  "exclude": ["sandbox"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "jsx": "react-jsx"
