chore: add 'models' workspace to package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "convert": "bun run --cwd=models convert"
   },
   "workspaces": [
-    "sandbox/app"
+    "sandbox/app",
+    "models"
   ],
   "dependencies": {
     "@heroui/accordion": "^2.2.20",
